# sinertaler

./: .gitignore  Makefile.am  README.md  configure.ac  setup.py
contrib/: README.md  bitcoin-qt.pro  bitcoind.bash-completion  qt_translations.py
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  bitcoin-qt.desktop  bitcoin-qt.install  bitcoin-qt.lintian-overrides  bitcoin-qt.protocol  bitcoind.bash-completion  bitcoind.examples  bitcoind.install  bitcoind.lintian-overrides  bitcoind.manpages
contrib/debian/examples/: bitcoin.conf
contrib/debian/manpages/: bitcoin-qt.1  bitcoin.conf.5  bitcoind.1
contrib/devtools/: README.md
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: base58.py  gen_base58_test_vectors.py
contrib/verifysfbinaries/: verify.sh
doc/: README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md
jsonrpc/: authproxy.py  proxy.py
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-sinertalerd-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.h  allocators.h  base58.h  bignum.h  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  clientversion.h  coins.h  compat.h  core.h  db.h  hash.h  init.cpp  init.h  key.h  keystore.h  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  miner.cpp  miner.h  mruset.h  net.cpp  net.h  netbase.h  noui.cpp  noui.h  rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  (+28 more)
src/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4  bitcoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoingui.h  coincontroldialog.cpp  guiutil.cpp  guiutil.h  intro.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentrequest.proto  paymentserver.cpp  paymentserver.h  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  recentrequeststablemodel.cpp  recentrequeststablemodel.h  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  sendcoinsentry.h  signverifymessagedialog.cpp  sinertaler.cpp  sinertaleraddressvalidator.h  sinertaleramountfield.cpp  sinertaleramountfield.h  sinertalergui.cpp  sinertalerstrings.cpp  sinertalerunits.cpp  sinertalerunits.h  transactiondesc.cpp  transactiontablemodel.cpp  (+6 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ar.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_es_CL.ts  bitcoin_es_MX.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_id_ID.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_nl.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_sah.ts  bitcoin_sq.ts  bitcoin_sr.ts  bitcoin_sv.ts  bitcoin_tr.ts  bitcoin_ur_PK.ts  bitcoin_uz@Cyrl.ts  bitcoin_vi.ts  bitcoin_zh_CN.ts  (+31 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  netbase_tests.cpp  test_sinertaler.cpp  wallet_tests.cpp
src/test/data/: tx_valid.json
